--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:openDrawer="start"
     android:orientation="vertical"
-    tools:context=".Activities.MainActivity">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    tools:context=".Activities.MainActivity"
+    tools:openDrawer="start">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
         <RelativeLayout
@@ -20,38 +20,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_menu_black_24dp"
-            android:id="@+id/nav_icon"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_margin="10dp"/>
+
+            <ImageView
+                android:id="@+id/nav_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_menu_black_24dp" />
         </RelativeLayout>
 
         <FrameLayout
             android:id="@+id/fragment_container"
-            android:layout_below="@+id/tool1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-        </RelativeLayout>
-
-
-
-
-
-
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="330dp"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:backgroundTint="#fff"
-            app:headerLayout="@layout/navigation_drawer_header"
-            app:itemIconTint="@drawable/drawer_item_color"
-            app:itemTextColor="@drawable/drawer_item_color"
-            app:menu="@menu/nav_options" />
+            android:layout_below="@+id/tool1" />
+    </RelativeLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="330dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:backgroundTint="#fff"
+        app:headerLayout="@layout/navigation_drawer_header"
+        app:itemIconTint="@drawable/drawer_item_color"
+        app:itemTextColor="@drawable/drawer_item_color"
+        app:menu="@menu/nav_options" />
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
