--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -44,12 +44,16 @@
                 android:layout_marginBottom="5dp"
                 android:backgroundTint="@android:color/white"
                 app:cardCornerRadius="15dp">
-
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                 <FrameLayout
+                    android:id="@+id/frame_layout1"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
 
@@ -57,26 +61,26 @@
                         android:id="@+id/profileIV"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        app:civ_border_color="@color/colorBlue"
-                        app:civ_border_width="5dp"
+                        android:layout_gravity="bottom|center_horizontal"
                         android:src="@drawable/ic_person_black_24dp"
-                        android:layout_gravity="bottom|center_horizontal" />
+                        app:civ_border_color="@color/colorBlue"
+                        app:civ_border_width="5dp" />
 
                     <ImageView
                         android:id="@+id/cameraIV"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
-                        android:padding="12dp"
+                        android:layout_gravity="bottom|end"
                         android:background="@drawable/custom_round"
-                        android:src="@drawable/ic_photo_camera_black_24dp"
-                        android:layout_gravity="bottom|end" />
+                        android:padding="12dp"
+                        android:src="@drawable/ic_photo_camera_black_24dp" />
                 </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="160dp"
-                    android:layout_marginTop="200dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/frame_layout1"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
@@ -92,12 +96,15 @@
                         android:layout_width="25dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:gravity="center"
                         android:layout_marginStart="3dp"
                         android:layout_marginEnd="5dp"
                         android:text="4.5"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
                 </LinearLayout>
+
+                </RelativeLayout>
 
 
             </androidx.cardview.widget.CardView>
@@ -298,6 +305,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <TextView
                             android:id="@+id/eventTV"
                             android:layout_width="180dp"
@@ -313,8 +321,8 @@
                             android:id="@+id/number_of_event"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/amarante"
                             android:layout_marginStart="10dp"
+                            android:fontFamily="@font/amarante"
                             android:text="0"
                             android:textColor="@color/colorBlack"
                             android:textSize="21sp" />
@@ -344,6 +352,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <TextView
                             android:id="@+id/tourTV"
                             android:layout_width="180dp"
@@ -359,9 +368,9 @@
                             android:id="@+id/number_of_tour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:fontFamily="@font/amarante"
                             android:text="0"
-                            android:layout_marginStart="10dp"
                             android:textColor="@color/colorBlack"
                             android:textSize="21sp" />
 
