--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -79,6 +79,7 @@
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:layout_marginStart="3dp"
                     android:layout_marginEnd="5dp"
                     android:text="4.5"
