--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -44,7 +44,35 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/date1_TIL"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/location_TIL"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:hint="Tour Date"
+        android:fontFamily="@font/amarante"
+        android:textColorHint="@color/colorYellow">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tourDate_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit_text_design"
+            android:inputType="text"
+            android:fontFamily="@font/amarante"
+            android:maxLines="1"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:textColor="#000"
+            android:textSize="21sp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
 
 
 
