--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -63,6 +63,7 @@
                         android:layout_height="150dp"
                         android:layout_gravity="bottom|center_horizontal"
                         android:src="@drawable/ic_person_black_24dp"
+                        android:transitionName="imageTransition"
                         app:civ_border_color="@color/colorBlue"
                         app:civ_border_width="5dp" />
 
@@ -82,7 +83,8 @@
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/frame_layout1"
                     android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:transitionName="ratingTransition">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -160,7 +162,8 @@
                             android:text="...."
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:transitionName="emailTransition"/>
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -221,7 +224,8 @@
                             android:text="...."
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:transitionName="nameTransition"/>
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
