--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,11 @@
                 android:layout_alignParentTop="true"
                 android:layout_margin="10dp"
                 android:src="@drawable/ic_menu_black_24dp" />
+        
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/tool1" />
+                android:layout_height="match_parent" />
 
     </RelativeLayout>
 
