--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -135,7 +135,7 @@
 
 
                         <ImageView
-                            android:id="@+id/IV1"
+                            android:id="@+id/e1"
                             android:layout_width="34dp"
                             android:layout_height="34dp"
                             android:layout_centerVertical="true"
@@ -143,7 +143,7 @@
                             android:src="@drawable/ic_email_black_24dp" />
 
                         <ImageView
-                            android:id="@+id/edit_txt1"
+                            android:id="@+id/e2"
                             android:layout_width="30dp"
                             android:layout_height="28dp"
                             android:layout_alignParentEnd="true"
@@ -163,7 +163,7 @@
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:transitionName="emailTransition"/>
+                            android:transitionName="emailTransition" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -194,7 +194,7 @@
 
 
                         <ImageView
-                            android:id="@+id/IV2"
+                            android:id="@+id/n1"
                             android:layout_width="38dp"
                             android:layout_height="38dp"
                             android:layout_centerVertical="true"
@@ -202,7 +202,7 @@
                             android:src="@drawable/ic_person_black_24dp" />
 
                         <TextView
-                            android:id="@+id/edit_txt2"
+                            android:id="@+id/n2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -225,7 +225,7 @@
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
-                            android:transitionName="nameTransition"/>
+                            android:transitionName="nameTransition" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -254,7 +254,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageView
-                            android:id="@+id/IV3"
+                            android:id="@+id/p1"
                             android:layout_width="34dp"
                             android:layout_height="34dp"
                             android:layout_centerVertical="true"
@@ -262,7 +262,7 @@
                             android:src="@drawable/ic_phone_black_24dp" />
 
                         <TextView
-                            android:id="@+id/edit_txt3"
+                            android:id="@+id/p2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
