--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -138,9 +138,10 @@
                             android:id="@+id/e1"
                             android:layout_width="34dp"
                             android:layout_height="34dp"
+                            android:padding="3dp"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10dp"
-                            android:src="@drawable/ic_email_black_24dp" />
+                            android:src="@drawable/ic_email" />
 
                         <ImageView
                             android:id="@+id/e2"
@@ -197,9 +198,10 @@
                             android:id="@+id/n1"
                             android:layout_width="38dp"
                             android:layout_height="38dp"
+                            android:padding="5dp"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10dp"
-                            android:src="@drawable/ic_person_black_24dp" />
+                            android:src="@drawable/ic_person" />
 
                         <TextView
                             android:id="@+id/n2"
@@ -259,7 +261,7 @@
                             android:layout_height="34dp"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="15dp"
-                            android:src="@drawable/ic_phone_black_24dp" />
+                            android:src="@drawable/ic_smartphone_call" />
 
                         <TextView
                             android:id="@+id/p2"
