--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,10 +35,11 @@
         android:layout_width="330dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:backgroundTint="#fff"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/navigation_drawer_header"
         app:itemIconTint="@drawable/drawer_item_color"
-        app:itemTextColor="@drawable/drawer_item_color"
+        app:itemTextColor="@android:color/black"
+        app:itemBackground="@drawable/nav_item_drawable"
         app:menu="@menu/nav_options" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
