--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/amarante"
             android:text="Create Your Own Event"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
 
@@ -42,7 +42,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
                 android:hint="Event Date"
-                android:textColorHint="@color/colorYellow">
+                app:boxStrokeColor="@android:color/white"
+                android:textColorHint="@android:color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/event_date"
@@ -50,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:gravity="center"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:textSize="21sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -64,7 +65,8 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="5dp"
                 android:hint="Event Time"
-                android:textColorHint="@color/colorYellow">
+                app:boxStrokeColor="@android:color/white"
+                android:textColorHint="@android:color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/event_time"
@@ -72,9 +74,11 @@
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:gravity="center"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:textSize="21sp" />
             </com.google.android.material.textfield.TextInputLayout>
+
+
         </RelativeLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -86,16 +90,17 @@
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
+            app:boxStrokeColor="@android:color/white"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:hint="Meeting Place"
-            android:textColorHint="@color/colorYellow">
+            android:textColorHint="@android:color/white">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/event_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="21sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -120,7 +125,7 @@
             android:paddingTop="5dp"
             android:paddingEnd="5dp"
             android:paddingBottom="5dp"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="18sp" />
 
@@ -137,6 +142,6 @@
             android:background="@drawable/custom_btn"
             android:text="Create Event"
             android:textAllCaps="false"
-            android:textColor="@color/colorYellow" />
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 </ScrollView>
