--- a/app/src/main/res/layout/activity_term__and__condition.xml
+++ b/app/src/main/res/layout/activity_term__and__condition.xml
@@ -12,19 +12,8 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="This is term and condition page, Update is coming soon...."
+        android:text="This is term and condition page. Update is coming soon...."
         android:textColor="@color/colorBlack"
         android:textSize="21sp" />
-
-
-    <Button
-        android:id="@+id/next_BTN4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt3"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="150dp"
-        android:text="Next"
-        android:textSize="25dp" />
 
 </RelativeLayout>
